--- a/Test.html
+++ b/Test.html
@@ -377,6 +377,69 @@ String julia_type(Environment x) {
 <pre class="r"><code>julia_type(JuliaObject(rnorm(10)))</code></pre>
 <pre><code>## [1] &quot;Array{Float64,1}&quot;</code></pre>
 </div>
+<div id="some-additional-results" class="section level2">
+<h2>Some Additional Results</h2>
+<p>In this additional test, I expand the result in the above test to make a simple <code>Rcpp</code> class as a wrapper for <code>JuliaObject</code>, I define some conversion function following the vignette of <a href="https://cran.r-project.org/web/packages/Rcpp/vignettes/Rcpp-extending.pdf">“Rcpp Extending”</a>. And I create an overloaded function <code>sqrt</code> for <code>JuliaObject</code> in <code>Rcpp</code>. The <code>Rcpp</code> function calls the <code>R</code> function to accomplish the overloading currently. A function <code>fn</code> is defined based on the overloaded <code>sqrt</code>.</p>
+<pre class="cpp"><code>#include &lt;RcppCommon.h&gt;
+
+class JuliaObject{
+public:
+    SEXP x;
+    JuliaObject();
+    JuliaObject(SEXP);
+    operator SEXP();
+};
+
+#include &lt;Rcpp.h&gt;
+using namespace Rcpp;
+
+JuliaObject::JuliaObject(SEXP x1){
+    if (!Environment(x1).inherits(&quot;JuliaObject&quot;)) stop(&quot;Input must be a JuliaObject.&quot;);
+    x = x1;
+};
+
+SEXP wrap(JuliaObject j){
+    return SEXP(j.x);
+}
+
+// [[Rcpp::export]]
+String julia_type(JuliaObject x) {
+    Environment julia(&quot;package:JuliaCall&quot;); Function jcall = julia[&quot;julia_call&quot;];
+    return jcall(&quot;julia_type&quot;, x);
+}
+
+JuliaObject sqrt(JuliaObject j){
+    Environment julia(&quot;package:JuliaCall&quot;); Function jcall = julia[&quot;julia_call&quot;];
+    return jcall(&quot;JuliaCall.JuliaObject&quot;, jcall(&quot;sqrt&quot;, j));
+}
+
+NumericVector _fn(NumericVector x){
+    return sqrt(x);
+}
+
+JuliaObject _fn(JuliaObject x){
+    return sqrt(x);
+}
+
+// [[Rcpp::export]]
+SEXP fn(SEXP x){
+    if (TYPEOF(x) == ENVSXP){
+        JuliaObject tmp = JuliaObject(x);
+        return wrap(_fn(tmp));
+    }
+    else if(TYPEOF(x) == REALSXP){
+            NumericVector tmp = NumericVector(x);
+            return wrap(_fn(tmp));
+            }
+    else{
+        stop(&quot;Input is not supported.&quot;);
+    }
+}</code></pre>
+<pre class="r"><code>fn(42)</code></pre>
+<pre><code>## [1] 6.480741</code></pre>
+<pre class="r"><code>fn(JuliaObject(42))</code></pre>
+<pre><code>## Julia Object of type Float64.</code></pre>
+</div>
 
 
 
